# misc

./: .gclient_entries  .gitignore
cpp/hellocuda/hellocuda/: CMakeLists.txt  hellocuda.vcxproj  kernel.cu
cpp/mataddmp/: CMakeLists.txt  main.cpp
docs/: ang1.md  attention_is_all_you_need.md  babel1.md  babel2.md  bug.md  bug1.md  bug2.md  bug3.md  forth.md  gpt.md  gpt10.md  gpt10v2.md  gpt11.md  gpt12.md  gpt13.md  gpt14.md  gpt15.md  gpt16.md  gpt17.md  gpt18.md  gpt19.md  gpt1n.md  gpt2.md  gpt20.md  gpt21.md  gpt22.md  gpt23.md  gpt24.md  gpt25.md  gpt26.md  gpt27.md  gpt3.md  gpt4.md  gpt5.md  gpt6.md  gpt7.md  gpt8.md  gpt9.md  js_ast.md  lean2.md  (+31 more)
dot/: 1.mmd  1.puml  2.mmd
erlang/: geometry.erl  hello.erl  shop1.erl
go/: main.go
js/: benchIsTrue.js  isTrue.js  t1.js
powershell/: getacl.cmd
python/: a1.py  a2c1.py  a2c_zoo.py  atari.py  bert1.py  cart-dqn.py  cart1-a2c.py  cart1-a3c.py  cart2.py  cart3.py  cmd2.py  dqn1.py  dqn3.py  dqn4.py  ones.py  permute.py  ppo1.py  ppo2.py  ppo3.py  ppo4.py  readlist.py  t1.py  tf.py  xq.py
swift/: hello.swift
ts/: babel.js  index.js  index.js.map  index.ts  package.json
v8/: hello2.cc  hello3.cc  hello4.cc  hello5.cc
wasm/: index.html  nodewat.js  package.json  readwat.js  run_remu.js  run_test001.js  runtest002.js  runtest003.js  test001.wasm  test001.wat  test002.wasm  test002.wat  test003.wasm  test003.wat  test1.wasm  test1.wat  test2.wasm  test2.wat  test_remu.wasm  test_remu.wat
wasm2/: hello.c  hello.wasm
wasm3/: runwasm.js  test1.wasm  test1.wat
webgl/: gl1.html  gpu1.html  test1.html  (+1 more)
(+198 files in other folders)
